--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,7 +5,8 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.google.gms:google-services:3.2.1'
     }
 }
 
@@ -27,3 +28,4 @@ subprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
