--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   provider:
-  google_maps_flutter:
+  google_maps_flutter: ^0.4.0
+  cloud_firestore:
+  # firebase_database: 1.0.5
+  
 
 dev_dependencies:
   flutter_test:
