--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -54,6 +54,11 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    // Fix try
+    // configurations {
+        // all*.exclude group: 'com.android.support', module: 'support-v4'
+        // all*.exclude group: 'com.android.support', module: 'support-annotations'
+    // }
 }
 
 flutter {
