--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  # image_picker: ^0.6.0
-  provider:
+  # image_picker_modern: ^0.4.12+3
+  provider: ^3.0.0
   google_maps_flutter: ^0.4.0
-  cloud_firestore:
+  cloud_firestore: ^0.8.0
   # firebase_database: 1.0.5
+  image_picker: ^0.4.6
+  firebase_storage: ^1.0.4
+  geolocator: ^2.1.1
+  permission_handler: "2.1.2"
+  google_api_availability: "1.0.4"
+  keyboard_avoider: "0.1.2"
   
 
 dev_dependencies:
