--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cloud_firestore: ^0.8.0
   # firebase_database: 1.0.5
   image_picker: ^0.4.6
+  firebase_auth: ^0.7.0
   firebase_storage: ^1.0.4
   geolocator: ^2.1.1
   permission_handler: "2.1.2"
