--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   image_picker: ^0.4.6
   firebase_auth: ^0.7.0
   firebase_storage: ^1.0.4
-  geolocator: ^2.1.1
+  # geolocator: ^5.1.5
   permission_handler: "2.1.2"
   google_api_availability: "1.0.4"
   keyboard_avoider: "0.1.2"
