--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cloud_firestore: ^0.13.0+1
+  firebase_auth: ^0.15.3+1
+  firebase_storage: ^3.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -26,11 +29,8 @@ dependencies:
   # image_picker_modern: ^0.4.12+3
   provider: ^3.0.0
   google_maps_flutter: ^0.4.0
-  cloud_firestore: ^0.8.0
   # firebase_database: 1.0.5
   image_picker: ^0.4.6
-  firebase_auth: ^0.7.0
-  firebase_storage: ^1.0.4
   # geolocator: ^5.1.5
   permission_handler: "2.1.2"
   google_api_availability: "1.0.4"
